# jobfit

./: .cursorignore  .dockerignore  .env.example  .envrc.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1b90459b016f_add_read_at_to_classifications.py  4d07a17040aa_initial.py  a3f82c19e4b7_add_known_brands_and_unmatched_industries.py  c8a3f91e7b52_add_starred_at_to_classifications.py
data/: softgarden_companies.csv
docs/: prep-claims-review.md  prep-personas-review.md  prep-workflow.md
docs/screenshots/: README.md
jobfit/: __init__.py  _log.py  app.py  ats_validator.py  brands.py  cache.py  classify.py  cli.py  config.py  enrich.py  industry.py  llm.py  mark_closed.py  prompt_display.py  scoring_config.py  startup.py  sync.py  utils.py  verify_urls.py
jobfit/anschreiben/: __init__.py  employer_address.py
jobfit/cv/: __init__.py  bullets.py  companies.py  contacts.py  extract.py  institutions.py  io.py  locations.py  privacy.py  restore.py  text.py
jobfit/dashboards/: __init__.py  _render.py  analysis.py  charts.py  cv.py  listings.py  scoring.py  skills.py  targets.py
jobfit/db/: __init__.py  models.py
jobfit/fetchers/: __init__.py  _cache.py  (+1 more)
scripts/: backfill_salary.py  backup.sh  cleanup_json.py  cleanup_non_de_ba.py  fix_classify_errors.py  import_jobs_from_old_pg.py  merge_from_old_pg.py  migrate_from_old_pg.sh  migrate_industry.py  migrate_postgres.py  migrate_role_dirs.py  migrate_to_db.py  skill_audit.py
tests/: conftest.py
(+154 files in other folders)
