[project]
name = "jobfit"
version = "0.6.2"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "alembic>=1.18.5",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "fastapi>=0.139.0",
    "fastapi-cache2>=0.2.2",
    "jinja2>=3.1.6",
    "jobhive-py[scrapers]>=0.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "plotly>=5.0.0",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.68.3",
    "uvicorn[standard]>=0.49.0",
    "weasyprint>=62.0",
    "rich>=15.0.0",
]

[project.scripts]
jobfit = "jobfit.cli:cli"
jobfit-serve = "jobfit.app:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["basedpyright>=1.39.9"]
tests = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportAny = false
reportPrivateLocalImportUsage = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnknownArgumentType = false
reportUnusedCallResult = false
